# vacui

./: .asm-lsp.toml  .clang-format  .clangd  .gitignore  .luarc.json  CMakeLists.txt  Cargo.toml  Kbuild  Kconfig  LICENSE  Makefile  README.md  foo.vac  go.mod  go.sum  kernel.ld  linker.ld  main.go  readme.txt  rust-toolchain.toml  xmake.lua
.zed/: settings.json
Documentation/: .gitignore
asm/: go.mod  go.sum  main.go  main.vasm
ast/: node.go
base/: go.mod
boot/: Makefile  sector.S
bootloader/: Cargo.toml  Makefile
cmd/: go.mod
component/: component.go  id.go  init.go  state.go
config/: i386.mk  readme.txt
core/: core.go
drivers/: Kbuild
drvs/: Kbuild  Kconfig  port.S
errors/: metadata.go  runtime.go
eval/: eval.go  worker.go
hub/: hub.c  hub.go  panic.go  start.S
inc/: vqboot.h  vqcmpext.h  vqtypes.h
include/: kernel.h  types.h  vqboot.h  vqtypes.h
kernel/: Cargo.toml  Kbuild  Kconfig  Makefile  kernel.ld  linker.ld
krnl/: Kconfig  linker.ld
metadata/: metadata.go
module/: module.go
parser/: parser.go  worker.go
private/: .gitignore
registry/: registry.go
runtime/: doc.go  errors.go  process.go  service.go
scanner/: scanner.go  worker.go
scripts/: build-opensbi.py  build-uboot.py  build.debug.sh  build.release.sh  build.sh  build_image.py  clean.py
service/: id.go  service.go
src/: bootloader.asm  bootloader.s  kernel.asm  main.c
token/: token.go
tools/: vqsetenv.sh
toolset/: i386.mk  readme.txt
troot/: Kbuild  Kconfig  cursor.c  entry.c  print.c
vacmini/: .clang-format  linker.ld  xmake.lua
(+565 files in other folders)
